# pico-agent

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
docs/: architecture.md  faq.md  getting-started.md  index.md  requirements.txt  skills.md
docs/how-to/: custom-tools.md  multi-provider.md  testing.md
docs/reference/: index.md
examples/basic-agent/: README.md  config.yml  requirements.txt
examples/basic-agent/app/: agents.py  main.py  tools.py
src/pico_agent/: __init__.py  bootstrap.py  config.py  decorators.py  exceptions.py  experiments.py  factory.py  interceptor.py  interfaces.py  lifecycle.py  locator.py  logging.py  messages.py  providers.py  proxy.py  registry.py  router.py  scanner.py  scheduler.py  tools.py  tracing.py  validation.py  virtual.py  virtual_tools.py
tests/: conftest.py  test_bootstrap.py  test_config.py  test_coverage_boost_v2.py  test_error_handling.py  test_exceptions.py  test_experiments.py  test_gemini_real.py  test_integration.py  test_interceptor.py  test_lifecycle.py  test_locator_coverage.py  test_logging.py  test_providers_coverage.py  test_proxy.py  test_registry.py  test_router.py  test_router_map_reduce.py  test_scanner_unit.py  test_scheduler.py  test_tools_and_scanning.py  test_tools_unit.py  test_tracing.py  test_validation.py  test_virtual.py  test_virtual_tools.py
